[package]
name = "solana-transaction-parser"
version = "0.1.0"
edition = "2021"

[features]
mocks = ["dep:mockall"]
default = []

[dependencies]
# Core
anchor-lang.workspace = true
anyhow.workspace = true
async-trait.workspace = true
base64.workspace = true
bs58.workspace = true
chrono.workspace = true
hex.workspace = true
mockall = { workspace = true, optional = true }
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
uuid.workspace = true

# Solana Crates
solana-sdk.workspace = true
solana-transaction-status.workspace = true
solana-transaction-status-client-types.workspace = true

# Solana Axelar Programs
solana-axelar-gas-service.workspace = true
solana-axelar-gateway.workspace = true
solana-axelar-its.workspace = true

relayer-core.workspace = true
redis.workspace = true

[dev-dependencies]
mockall.workspace = true

[lints.clippy]
uninlined_format_args = "allow"
unwrap_used = "warn"
indexing_slicing = "warn"
